* Bugfix persistent sessions * CSS vertical align middle in admin tables
git-svn-id: file:///home/code/svn/ovd/trunk@215 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/style/common.css
+++ b/SessionManager/web/admin/media/style/common.css
@@ -3,7 +3,7 @@ table.admin_table {
 }
 
 table.admin_table td {
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 table.admin_table td.menu {
